force-app/main/default/objects/Call_Report__c/Call_Report__c.object-meta.xml
<CustomObject>
    <description>Event Report Object to store the Event Information and associate Attendees and Send Email to them.</description>
    <label>Event Report</label>
    <nameField>
        <label>Event Report</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>