force-app/main/default/objects/Call_Report__c/fields/AgendaMeetingDate__c.field-meta.xml
<CustomField>
    <fullName>AgendaMeetingDate__c</fullName>
    <label>AgendaMeetingDate</label>
    <length>12</length>
    <type>Text</type>
</CustomField>