force-app/main/default/objects/Call_Report__c/fields/AllDayEvent__c.field-meta.xml
<CustomField>
    <fullName>AllDayEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Day Event</label>
    <type>Checkbox</type>
</CustomField>