force-app/main/default/objects/Call_Report__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To whom the call report has been Assigned To.
Deprecated field as per CIB business request, field to be reviewed in January 2021 to consider deleting the field.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Call_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>