force-app/main/default/objects/Call_Report__c/fields/Attendee_Reminder_Required__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Reminder_Required__c</fullName>
    <description>NO_NEED - no need for reminder
            NEED_REMINDER - reminder task will be created
            HAS_REMINDER_NEED - reminder task exists and active
            HAS_REMINDER_NO_NEED - reminder task exists and compleated
            NOT_REQUIRED - event created before US-3323 go live</description>
    <label>Attendee Reminder Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO_NEED</fullName>
                <default>true</default>
                <label>NO_NEED</label>
            </value>
            <value>
                <fullName>NEED_REMINDER</fullName>
            </value>
            <value>
                <fullName>HAS_REMINDER_NEED</fullName>
            </value>
            <value>
                <fullName>HAS_REMINDER_NO_NEED</fullName>
            </value>
            <value>
                <fullName>NOT_REQUIRED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>