force-app/main/default/objects/Call_Report__c/fields/BPID__c.field-meta.xml
<CustomField>
    <fullName>BPID__c</fullName>
    <formula>Relate_to_Client__r.BPID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BPID</label>
    <type>Text</type>
</CustomField>