force-app/main/default/objects/Call_Report__c/fields/C_Suite_Attendance__c.field-meta.xml
<CustomField>
    <fullName>C_Suite_Attendance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate a C-Suite client contact that is invited or attended the meeting (SPGRT-1374)</description>
    <inlineHelpText>An indicator that shows if at least one client contact with a c-suite contact category attended the meeting</inlineHelpText>
    <label>C-Suite Attendance</label>
    <type>Checkbox</type>
</CustomField>