force-app/main/default/objects/Call_Report__c/fields/Chairperson__c.field-meta.xml
<CustomField>
    <fullName>Chairperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person chairing the NBAC Meeting(US-1370).</description>
    <inlineHelpText>Person chairing the NBAC Meeting.</inlineHelpText>
    <label>Chairperson</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>