force-app/main/default/objects/Call_Report__c/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <externalId>true</externalId>
    <label>Client Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>