force-app/main/default/objects/Call_Report__c/fields/Client_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Name__c</fullName>
    <description>Case 4296 Event Report Enhancements</description>
    <formula>Report_Client_Contact__r.FirstName+&quot; &quot;+ Report_Client_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Contact Name</label>
    <type>Text</type>
</CustomField>