force-app/main/default/objects/Call_Report__c/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <description>Case C-00004250 - This field is used to find the cleint team members when sending event report email</description>
    <formula>Relate_to_Client__r.Id</formula>
    <label>ClientId</label>
    <type>Text</type>
</CustomField>