force-app/main/default/objects/Call_Report__c/fields/Core_Client_Team_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Core_Client_Team_Attendees__c</fullName>
    <description>Field counts the amount of Core Client Team Members that attended the meeting (US-1414). Core Roles as at July 2016 are
            Manager Client Coverage,IB Champion,GM Champion,TPS Champion,Executive Sponsor, Sector/Client Coverage Head and Credit Risk</description>
    <inlineHelpText>How many Core Client Team members attended this meeting?</inlineHelpText>
    <label>Core Client Team Attendees</label>
    <summaryFilterItems>
        <field>Call_Report_Attendees__c.Client_Team_Role__c</field>
        <operation>equals</operation>
        <value>Manager Client Coverage,IB Champion,GM Champion,TPS Champion,Executive Sponsor, Sector/Client Coverage Head,Credit Risk</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Call_Report_Attendees__c.Status__c</field>
        <operation>equals</operation>
        <value>Attended</value>
    </summaryFilterItems>
    <summaryForeignKey>Call_Report_Attendees__c.Call_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>