force-app/main/default/objects/Call_Report__c/fields/Core_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Core_Meeting__c</fullName>
    <description>Event Management - Core Indicator (EN-0877), Modified to check for 2 Core Client Team Attendees (US-1414) - currently excluded for Commercial Banking</description>
    <formula>IF(
    OR(
       ISPICKVAL(Meeting_Purpose__c, &apos;Client Discussion/Insights&apos;),
       ISPICKVAL(Meeting_Purpose__c, &apos;Client Execution&apos;),
       ISPICKVAL(Meeting_Purpose__c, &apos;Client Pitch&apos;),
       ISPICKVAL(Meeting_Purpose__c, &apos;Client Road Show&apos;),
       ISPICKVAL(Meeting_Purpose__c, &apos;Market Research Update&apos;),
       ISPICKVAL(Meeting_Purpose__c, &apos;Core Client Team Meeting&apos;)
      )
    &amp;&amp;
    OR(
       Core_Client_Team_Attendees__c &gt; 1,
       ISPICKVAL(Relate_to_Client__r.Primary_Relationship_Holder__c, &apos;Commercial Banking&apos;)
      ),
    True,
    False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Interactions where at least 2 core client team members attended the meeting. This applies to the following internal meeting: Core Client Team Meeting &amp; the following external: Client Entertainment, Client Meeting, Client Roadshow &amp; Market Research Update</inlineHelpText>
    <label>Core Meeting</label>
    <type>Checkbox</type>
</CustomField>