force-app/main/default/objects/Call_Report__c/fields/Created_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Name__c</fullName>
    <description>This is used to capture the created by name of event report, EN-0721</description>
    <formula>CreatedBy.FirstName +&apos; &apos;+ CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Name</label>
    <type>Text</type>
</CustomField>