force-app/main/default/objects/Call_Report__c/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <formula>TEXT(Relate_to_Client__r.Primary_Relationship_Holder__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Segment</label>
    <type>Text</type>
</CustomField>