force-app/main/default/objects/Call_Report__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The Start Date of the event derived from the Start Date field. Shows only Date information. Please see C-00000886 for more details.</description>
    <formula>DATEVALUE( Start__c )</formula>
    <label>Date</label>
    <type>Date</type>
</CustomField>