force-app/main/default/objects/Call_Report__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>US-3400 - Field is visible to all users who have access to the related parent record within Salesforce. Information is to be limited to Agenda detail. Field is synced with the Description field on the standard Event.</description>
    <inlineHelpText>Agenda items to be discussed at the meeting. Commentary added here will be included in the notification email.</inlineHelpText>
    <label>Agenda</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>