force-app/main/default/objects/Call_Report__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal Banking</fullName>
            </value>
            <value>
                <fullName>Business Banking</fullName>
            </value>
            <value>
                <fullName>Commercial Banking</fullName>
            </value>
            <value>
                <fullName>Corporate and Investment Banking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>