force-app/main/default/objects/Call_Report__c/fields/Enforce_Core_Attendee_Validation__c.field-meta.xml
<CustomField>
    <fullName>Enforce_Core_Attendee_Validation__c</fullName>
    <description>The field decides whether the validation of at least 2 core attendees on an internal core meeting is applied or not (US-1414).</description>
    <formula>ISPICKVAL(Meeting_Audience__c, &apos;Internal&apos;)
&amp;&amp; ISPICKVAL(Meeting_Purpose__c, &apos;Core Client Team Meeting&apos;)
&amp;&amp; (ISBLANK(Relate_to_Client__c) || !ISPICKVAL(Relate_to_Client__r.Primary_Relationship_Holder__c, &apos;Commercial Banking&apos;))</formula>
    <inlineHelpText>Enforce the 2-core-attendees based on &apos;Meeting Audience&apos;, &apos;Meeting Type&apos;, and the client&apos;s &apos;Primary Relationship Holder&apos;.</inlineHelpText>
    <label>Enforce Core Attendee Validation</label>
    <type>Checkbox</type>
</CustomField>