force-app/main/default/objects/Call_Report__c/fields/Event_Priority__c.field-meta.xml
<CustomField>
    <fullName>Event_Priority__c</fullName>
    <description>Case# 976. Rudolf Niehaus: Add new pick-list field to be used in Event Reporting to sync from Event to Event Report and visa versa.</description>
    <label>Event Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
                <color>#FF0000</color>
                <label>High</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <color>#FFFF66</color>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <color>#33CC00</color>
                <default>true</default>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>