force-app/main/default/objects/Call_Report__c/fields/Event_Record__c.field-meta.xml
<CustomField>
    <fullName>Event_Record__c</fullName>
    <description>This formula field contains link to the Event record detail page associated with this Call Report.</description>
    <formula>HYPERLINK(&quot;/&quot; &amp;  EventId__c , &quot;Goto Event record page&quot;,&quot;_top&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please click on the hyperlink to goto the Event record detail page.</inlineHelpText>
    <label>Event Record</label>
    <type>Text</type>
</CustomField>