force-app/main/default/objects/Call_Report__c/fields/Event_Report_Count__c.field-meta.xml
<CustomField>
    <fullName>Event_Report_Count__c</fullName>
    <description>Used in reports.  Allows report builders to summarize the number of unique accounts at a group level in reports.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Report Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>