force-app/main/default/objects/Call_Report__c/fields/EventId__c.field-meta.xml
<CustomField>
    <fullName>EventId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Stores Event Id</description>
    <externalId>true</externalId>
    <label>EventId</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>