force-app/main/default/objects/Call_Report__c/fields/Follow_Up_Items__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Items__c</fullName>
    <label>Follow-Up Items</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>