force-app/main/default/objects/Call_Report__c/fields/Issues_Risks__c.field-meta.xml
<CustomField>
    <fullName>Issues_Risks__c</fullName>
    <label>Issues/Risks</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>