force-app/main/default/objects/Call_Report__c/fields/Meeting_Audience__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Audience__c</fullName>
    <description>The nature of the meeting and its participants. E.g. Internal would represent a client team meeting about this Client, not with the Client</description>
    <inlineHelpText>The nature of the meeting and its participants. E.g. Internal would represent a client team meeting about this Client, not with the Client</inlineHelpText>
    <label>Meeting Audience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>