force-app/main/default/objects/Call_Report__c/fields/Meeting_Format__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Format__c</fullName>
    <description>This field describes the format in which the meeting was conducted (SGPRT-1258)</description>
    <inlineHelpText>This field describes the format in which the meeting was conducted.</inlineHelpText>
    <label>Meeting Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>