force-app/main/default/objects/Call_Report__c/fields/Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Notes__c</fullName>
    <description>US-3273</description>
    <inlineHelpText>Section for Secretaries to add notes about the Meeting. These notes will be sent out with the Meeting Agenda.</inlineHelpText>
    <label>Meeting Notes</label>
    <length>3500</length>
    <type>Html</type>
</CustomField>