force-app/main/default/objects/Call_Report__c/fields/NBAC_Secretary__c.field-meta.xml
<CustomField>
    <fullName>NBAC_Secretary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person coordinating meeting attendees and minute taking (US-1370).</description>
    <inlineHelpText>Person coordinating meeting attendees and minute taking.</inlineHelpText>
    <label>NBAC Secretary</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Reports2</relationshipName>
    <type>Lookup</type>
</CustomField>