force-app/main/default/objects/Call_Report__c/fields/Number_Of_Attended_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Attended_Attendees__c</fullName>
    <description>Technical field</description>
    <label>Number Of Attendeed Attendees</label>
    <summaryFilterItems>
        <field>Call_Report_Attendees__c.Status__c</field>
        <operation>equals</operation>
        <value>Attended</value>
    </summaryFilterItems>
    <summaryForeignKey>Call_Report_Attendees__c.Call_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>