force-app/main/default/objects/Call_Report__c/fields/Number_of_attendees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_attendees__c</fullName>
    <description>Counts number of attendees on for event report.</description>
    <label>Number of attendees</label>
    <summaryForeignKey>Call_Report_Attendees__c.Call_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>