force-app/main/default/objects/Call_Report__c/fields/Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Outcomes__c</fullName>
    <label>Outcomes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>