force-app/main/default/objects/Call_Report__c/fields/Relate_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Relate_to_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>link related client to event report</description>
    <inlineHelpText>The Client that was ‘discussed at / included in’ the meeting. You are required to provide a Related to Client when the Meeting Audience is Internal, and there is no Related to Opportunity, Case or Campaign</inlineHelpText>
    <label>Related to Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Reports (Relate to Client)</relationshipLabel>
    <relationshipName>Event_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>