force-app/main/default/objects/Call_Report__c/fields/Relate_to_Opp__c.field-meta.xml
<CustomField>
    <fullName>Relate_to_Opp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link opportunity to event report</description>
    <inlineHelpText>The Opportunity to which the meeting is applicable.</inlineHelpText>
    <label>Related to Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Event Reports</relationshipLabel>
    <relationshipName>Event_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>