force-app/main/default/objects/Call_Report__c/fields/Related_to_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case#1168 - Rudolf Niehaus - 12/2012
            Campaign Management</description>
    <inlineHelpText>The Campaign to which the meeting is applicable.</inlineHelpText>
    <label>Related to Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Event Reports</relationshipLabel>
    <relationshipName>Event_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>