force-app/main/default/objects/Call_Report__c/fields/Related_To_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case#1168 - Rudolf Niehaus - 12/2012
            Campaign Managment
Deprecated field as per CIB business request, field to be reviewed in January 2021 to consider deleting the field.</description>
    <inlineHelpText>The Case to which the meeting is applicable.</inlineHelpText>
    <label>Related To Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Event Reports</relationshipLabel>
    <relationshipName>Event_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>