force-app/main/default/objects/Call_Report__c/fields/Related_To_Non_Corporate_Clients_del__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Non_Corporate_Clients_del__c</fullName>
    <description>Case# 1168 - Rudolf Niehaus - 01/2012
            User can add non corprated client names to the event</description>
    <inlineHelpText>Please add the Client name in this field when the Event Report is related to the “Non-CIB Client” in the field above</inlineHelpText>
    <label>Related To Non CIB Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>