force-app/main/default/objects/Call_Report__c/fields/Report_Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Report_Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact / Lead Lookup for the Report</description>
    <inlineHelpText>Contact at the Client with whom the meeting ‘will be / was’ held. You are required to provide the main Client Contact when the Meeting Audience is External, and there is no Related to Opportunity, Case or Campaign</inlineHelpText>
    <label>Client Contact</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR (2 AND 3 AND 4)</booleanFilter>
        <errorMessage>Please enter an active Client Contact for External Meetings only. Bank Contacts (Employees) or inactive contacts cannot be captured.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client Contact Record Type</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Inactive Client Contact Record Type</value>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Contact.Inactive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Reports (Client Contact)</relationshipLabel>
    <relationshipName>Event_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>