force-app/main/default/objects/Call_Report__c/fields/Report_Client_Lead__c.field-meta.xml
<CustomField>
    <fullName>Report_Client_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to lead should there be no contact that can be linked</description>
    <label>Client Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Event Reports</relationshipLabel>
    <relationshipName>Event_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>