force-app/main/default/objects/Call_Report__c/fields/Report_Show_Time_As__c.field-meta.xml
<CustomField>
    <fullName>Report_Show_Time_As__c</fullName>
    <description>Picklist containing the same values as on the Event for updates</description>
    <label>Show Time As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>OutOfOffice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>