force-app/main/default/objects/Call_Report__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <description>Picklist with same values as the Event used for updating the Event</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Entertainment Event</fullName>
            </value>
            <value>
                <fullName>Client Team Meeting</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Internal Meeting</fullName>
            </value>
            <value>
                <fullName>Market Research Update</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Road Show</fullName>
            </value>
            <value>
                <fullName>Service Call</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Telephone Call</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>